_course_files/1-Telemetry/6-istio-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  hosts:
    - fleetman-staff-service
  http:
    - route:
        - destination:
            host: fleetman-staff-service
            subset: stable
          weight: 30
        - destination:
            host: fleetman-staff-service
            subset: canary
          weight: 70
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  host: fleetman-staff-service
  subsets:
    - labels:
        version: stable
      name: stable
    - labels:
        version: canary
      name: canary
